[package]
name = "gearrs"
version = "0.2.3"
edition = "2024"

authors = ["Henrik Hachmann <henrik.hachmann@nerou.de>"]
license = "MIT OR Apache-2.0"
description = "An async Gearman client implementation in Rust"
readme = "README.md"
repository = "https://github.com/ComputerDuck/gearrs"

keywords = ["gearman", "client", "tokio", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bytes = "1.10.1"
log = "0.4.27"
tokio = { version = "1.45.0", features = ["io-util", "macros", "net", "sync", "time"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["test-util"] }
